--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.14.1",
-    "onchange": "^7.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "serve": "^11.3.2",
     "typescript": "^3.9.7"
   },
@@ -18,8 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prettier-watch": "onchange \"**/*.{js,jsx,ts,tsx}\" -- prettier --write {{changed}}"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
